--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "@angular/router": "~8.1.1",
         "bootstrap": "^3.4.1",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.4.1",
         "json-server": "^0.12.1",
+        "popper": "^1.0.1",
         "rxjs": "~6.4.0",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
